tests/fixtures/lua54/errors/circular_dep/input/b.lua
local a = require("a")

local b = {}

function b.value()
    return a.value() + 1
end

return b
